Closed Bug 1092831 Opened 11 years ago Closed 11 years ago

BufferSourceNode using a BufferSource generated in code with two channels plays in mono

Categories

(Core :: Web Audio, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: sole, Assigned: padenot)

Details

Attachments

(3 files)

http://sole.github.io/test_cases/web_audio/buffersourcenotstereo/ Expected: I would expect the sample to play in stereo - different sound in each channel Results: The sample plays in mono (no spatial sense at all is perceived) I get the expected result in Chrome.
Attached file testcase
Sole, here is a simpler test case, and I can't seem to repro (I get noise on the left, sine on the right). Would you know what is different in your test case compared to mine ?
Flags: needinfo?(sole)
Yes, I can confirm your test case works as expected. Let me investigate further to see what is the exact thing that causes this-I have a bunch of gain nodes and an analyser so maybe this is an error somewhere else :-o
Flags: needinfo?(sole)
Oh, I found it! it's the analyser node which is converting the inputs to mono output :O Attaching updated test case.
Assignee: nobody → padenot
Status: NEW → ASSIGNED
Comment on attachment 8531005 [details] [diff] [review] AnalyserNode should have channelCountMode set to "max". r= Review of attachment 8531005 [details] [diff] [review]: ----------------------------------------------------------------- Ehsan, this change make it so that AnalyserNode does not downmix its inputs to mono, and simply passes audio through, which is what authors expect. The spec has been changed already [0]. [0]: https://github.com/WebAudio/web-audio-api/commit/201ed628acf82298688705f45c16e2649ec8495e
Attachment #8531005 - Flags: review?(ehsan.akhgari)
Comment on attachment 8531005 [details] [diff] [review] AnalyserNode should have channelCountMode set to "max". r= Review of attachment 8531005 [details] [diff] [review]: ----------------------------------------------------------------- I should have spotted this before... Sorry!
Attachment #8531005 - Flags: review?(ehsan.akhgari) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: