Bug 1092831 - AnalyserNode should have channelCountMode set to "max" by default. r=ehsan

Spec change: https://github.com/WebAudio/web-audio-api/issues/450

--HG--
extra : rebase_source : f8e71f73e45f31e31c745e29e4b694778d7db445